--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ a2wsgi==1.8.0
 anyio==4.0.0
 asgiref==3.7.2
 attrs==23.1.0
+beautifulsoup4==4.12.2
 blinker==1.7.0
 certifi==2023.7.22
 charset-normalizer==3.3.2
@@ -30,6 +31,7 @@ referencing==0.31.0
 requests==2.31.0
 rpds-py==0.12.0
 sniffio==1.3.0
+soupsieve==2.5
 starlette==0.32.0.post1
 swagger_ui_bundle==1.1.0
 typing_extensions==4.8.0
