--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 a2wsgi==1.8.0
 anyio==4.0.0
+APScheduler==3.10.4
 asgiref==3.7.2
 attrs==23.1.0
 beautifulsoup4==4.12.2
@@ -11,6 +12,7 @@ connexion==3.0.1
 docopt==0.6.2
 exceptiongroup==1.1.3
 Flask==3.0.0
+Flask-APScheduler==1.13.1
 flask-swagger==0.2.14
 h11==0.14.0
 httpcore==1.0.2
@@ -23,22 +25,32 @@ Jinja2==3.1.2
 jsonschema==4.19.2
 jsonschema-specifications==2023.11.1
 MarkupSafe==2.1.3
+outcome==1.3.0.post0
 pipreqs==0.4.13
+PySocks==1.7.1
+python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-multipart==0.0.6
+pytz==2023.3.post1
 PyYAML==6.0.1
 referencing==0.31.0
 requests==2.31.0
 rpds-py==0.12.0
+six==1.16.0
 sniffio==1.3.0
+sortedcontainers==2.4.0
 soupsieve==2.5
 starlette==0.32.0.post1
 swagger_ui_bundle==1.1.0
+trio==0.23.1
+trio-websocket==0.11.1
 typing_extensions==4.8.0
+tzlocal==5.2
 urllib3==2.1.0
 uvicorn==0.24.0.post1
 uvloop==0.19.0
 watchfiles==0.21.0
 websockets==12.0
 Werkzeug==3.0.1
+wsproto==1.2.0
 yarg==0.1.9
